# powerline-rust

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  modules.rs  powerline.rs  terminal.rs  theme.rs  utils.rs
src/modules/: cmd.rs  cwd.rs  exit_code.rs  git.rs  host.rs  jobs.rs  readonly.rs  time.rs  user.rs  venv.rs
src/modules/git/: gitoxide.rs  process.rs
