[package]
name = "powerline"
version = "0.3.1-mh01"
authors = ["cirho <me@cirho.com>", "Marc Honnorat <marc@honnorat.fr>"]
edition = "2018"

[dependencies]
uzers = "0.12.1"
libc = "0.2.169"
hostname = "0.4.0"
git2 = { version = "0.20.0", optional = true, default-features = false }
chrono = { version = "0.4.39", optional = true }

[features]
default = ["bash-shell", "libgit"]
bash-shell = []
bare-shell = []
zsh-shell = []
libgit = ["git2"]
time = ["chrono"]

[profile.release]
opt-level = 3
lto = true
debug = false
