[package]
name = "powerline"
version = "0.4.0"
authors = ["cirho <me@cirho.com>", "Marc Honnorat <marc@honnorat.fr>"]
edition = "2024"

[dependencies]
uzers = "0.12.2"
libc = "0.2.186"
gix = { version = "0.84.0", default-features = false, features = ["status", "revision", "max-performance-safe", "sha1"], optional = true }

[features]
default = ["bash-shell", "gitoxide"]
bash-shell = []
bare-shell = []
zsh-shell = []
gitoxide = ["dep:gix"]
time = []

[profile.release]
opt-level = 3
lto = true
debug = false
